# OrderExecutionManagement

./: CMakeLists.txt  Doxyfile  README.md
include/: api_client.h  logger.h  order_manager.h
src/: api_client.cpp  logger.cpp  main.cpp  order_manager.cpp
